AC_INIT(rsa.cc)

PACKAGE=RSA
VERSION=0.1.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

OPENSSL_REQUIRED_VERSION=0.9
PKG_CHECK_MODULES(OPENSSL, openssl >= $OPENSSL_REQUIRED_VERSION)
AC_CHECK_LIB(gmp, __gmpz_init, , [AC_MSG_ERROR([GNU MP not found, see https://gmplib.org/])])
AC_SUBST(OPENSSL_CFLAGS)
AC_SUBST(OPENSSL_LIBS)
AC_PROG_CXX
AC_OUTPUT(Makefile)
